Add dashboard with stack statistics and Pareto analysis to UI
- Added dashboard section to index.html, including display of stack mean, sigma, 3σ range, 6σ range, and Pareto contributions
- Implemented calculations and rendering logic for stack statistics and Pareto chart in js/dashboard.js
- Updated styles for dashboard layout and visual clarity in styles.css

--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
           </div>
         </div>
         <h3>Pareto Contributions</h3>
+        <div class="pareto-info">
+          <p class="pareto-explanation">
+            The Pareto Principle (80/20 rule) states that roughly 80% of effects come from 20% of causes. 
+            In tolerance analysis, this means a small number of dimensions typically contribute most to stack variation. 
+            <strong>Focusing improvement efforts on the "vital few" dimensions will yield the greatest impact.</strong>
+          </p>
+        </div>
         <div id="pareto-chart"></div>
+        <div class="pareto-legend"></div>
       </section>
     </main>
 
