Made rows draggable and deleteable

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
           <table>
             <thead>
               <tr>
+                <th style="width: 40px;"></th>
                 <th>Description</th>
                 <th>Nominal</th>
                 <th>Tolerance Type</th>
                 <th>Tol (+/-)</th>
                 <th>Cpk</th>
                 <th>Float Shifted</th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody id="stack-body"></tbody>
