--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <th style="width: 40px;"></th>
                 <th>Description</th>
                 <th>Nominal</th>
+                <th>Direction</th>
                 <th class="advanced-col tolerance-type-col" style="display: none;">Tolerance Type</th>
                 <th>Tol (+/-)</th>
                 <th class="advanced-col cpk-col" style="display: none;">Cpk</th>
