Fixed height issue with pareto chart

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <thead>
               <tr>
                 <th style="width: 40px;"></th>
+                <th style="width: 60px;">Item Nr</th>
                 <th>Description</th>
                 <th>Nominal</th>
                 <th>Direction</th>
