--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <tr>
                 <th style="width: 40px;"></th>
                 <th style="width: 60px;">Item Nr</th>
+                <th style="width: 100px;">Part Nr</th>
                 <th>Description</th>
                 <th>Nominal</th>
                 <th>Direction</th>
